(lang dune 3.11)
(name cj)
(generate_opam_files true)
(authors     "Dmitry Ponyatov <dponyatov@gmail.com>")
(maintainers "Dmitry Ponyatov <dponyatov@gmail.com>")
(license      MIT)
(homepage    "https://github.com/ponyatov/oc/tree/hello")
(bug_reports "http://t.me/dponyatov")
(package
 (name         cj)
 (synopsis    "Cangjie-inspired script language")
 (description "OCaml prototype for native Linux")
 (depends      utop ocamlformat ocaml-lsp-server batteries)
 (tags        (Cangjie script compiler interpreter))
)
